// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductAddToBagVanilla should render correctly should match snapshot 1`] = `
<form
  className=""
  noValidate={true}
>
  <Styled(Row)
    className="edit-form-css"
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 10,
          "medium": 10,
          "small": 10,
        }
      }
    >
      <div
        className="select-value-wrapper"
      >
        <div
          className="size-selector"
        >
          <Field
            className="size-field"
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-chPdSV",
                  "isStatic": false,
                  "rules": Array [
                    "
  ",
                    "
  .size-and-fit-detail-container {
    .size-and-fit-detail-title-msg {
      font-size: ",
                    [Function],
                    "px;
      font-weight: ",
                    [Function],
                    ";
      margin-left: 25px;
      vertical-align: middle;
      font-family: ",
                    [Function],
                    ";
    }
  }

  .size-and-fit-detail-items-list {
    margin-top: ",
                    [Function],
                    ";
    width: calc(100% + 10px);
    position: relative;
    left: -5px;
    font-family: ",
                    [Function],
                    ";
  }

  /* Radio Button for size */
  .size-and-fit-detail-item {
    padding: 0px;
    margin: 5px;
    cursor: pointer;

    .input-radio-title {
      padding: 5px ",
                    [Function],
                    ";
      border: 1px solid ",
                    [Function],
                    ";
      display: inline-block;
      text-transform: capitalize;
      font-size: ",
                    [Function],
                    "px;
      border-radius: 6px;
      margin-bottom: ",
                    [Function],
                    ";
      text-align: center;
      width: 54px;
    }

    &.item-disabled-option .input-radio-title {
      color: #e3e3e3;
      cursor: initial;
      border: solid 1px #e3e3e3;
    }

    .input-radio-icon-unchecked,
    .input-radio-icon-checked {
      width: auto;
      height: auto;
      top: auto;
      position: absolute;
      vertical-align: middle;

      input {
        -webkit-appearance: none;
        display: none;
      }

      &:before,
      &:after {
        display: none;
      }
    }

    .input-radio-icon-checked + .input-radio-title {
      background: ",
                    [Function],
                    ";
      color: ",
                    [Function],
                    ";
      border: solid 1px ",
                    [Function],
                    ";
      font-weight: ",
                    [Function],
                    ";
    }
  }
",
                    ";
",
                  ],
                },
                "displayName": "Styled(ProductSizeSelector)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-chPdSV",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            dataLocator="addnewaddress-state"
            id="size"
            name="Size"
            onChange={[MockFunction]}
            sizesMap={
              Immutable.List [
                Immutable.Map {
                  "displayName": "XS (4)",
                  "id": "XS (4)",
                  "maxAvailable": 739,
                },
              ]
            }
            title="Size:"
            width={49}
          />
        </div>
        <Connect(ProductPickupContainer)
          formName="ProductAddToBag-3000935_IV"
          isAnchor={true}
          productInfo={
            Object {
              "colorFitsSizesMap": Array [
                Object {
                  "categoryEntity": "Girl:School Uniforms",
                  "color": Object {
                    "family": "BLUE",
                    "imagePath": "/wcsstore/GlobalSAS/images/tcp/products/swatches/3000935_IV.jpg",
                    "name": "TIDAL",
                  },
                  "colorDisplayId": "3000935_IV",
                  "colorProductId": "1281598",
                  "favoritedCount": 0,
                  "fits": Array [
                    Object {
                      "fitName": "regular",
                      "isDefault": true,
                      "maxAvailable": 1.7976931348623157e+308,
                      "sizes": Array [
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 739,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 0,
                          "sizeName": "XS (4)",
                          "skuId": "1281998",
                          "variantId": "00193511074322",
                          "variantNo": "3000935007",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 6771,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 1,
                          "sizeName": "S (5/6)",
                          "skuId": "1282327",
                          "variantId": "00193511074339",
                          "variantNo": "3000935008",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 12920,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 2,
                          "sizeName": "M (7/8)",
                          "skuId": "1281700",
                          "variantId": "00193511074346",
                          "variantNo": "3000935009",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 9331,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 3,
                          "sizeName": "L (10/12)",
                          "skuId": "1281815",
                          "variantId": "00193511074353",
                          "variantNo": "3000935010",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 4381,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 4,
                          "sizeName": "XL (14)",
                          "skuId": "1281870",
                          "variantId": "00193511074360",
                          "variantNo": "3000935011",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 3473,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 5,
                          "sizeName": "XXL (16)",
                          "skuId": "1281922",
                          "variantId": "00193511074377",
                          "variantNo": "3000935012",
                        },
                      ],
                    },
                    Object {
                      "fitName": "plus",
                      "isDefault": false,
                      "maxAvailable": 1.7976931348623157e+308,
                      "sizes": Array [
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 1037,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 0,
                          "sizeName": "L(10P-12P)",
                          "skuId": "1225288",
                          "variantId": "00193511079488",
                          "variantNo": "3000936026",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 1231,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 1,
                          "sizeName": "XL(14P)",
                          "skuId": "1225289",
                          "variantId": "00193511079495",
                          "variantNo": "3000936027",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 2345,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 2,
                          "sizeName": "XXL (16P)",
                          "skuId": "1225287",
                          "variantId": "00193511079471",
                          "variantNo": "3000936025",
                        },
                      ],
                    },
                  ],
                  "hasFits": true,
                  "imageName": "3000935_IV",
                  "listPrice": 12.95,
                  "maxAvailable": 42228,
                  "maxAvailableBoss": 0,
                  "miscInfo": Object {
                    "badge1": Object {
                      "defaultBadge": "ONLINE EXCLUSIVE",
                    },
                    "badge2": "",
                    "hasOnModelAltImages": "",
                    "isBopisEligible": false,
                    "isBossEligible": true,
                    "isClearance": "",
                    "keepAlive": false,
                    "videoUrl": "",
                  },
                  "name": null,
                  "offerPrice": 12.95,
                  "pdpUrl": "/us/p/3000935_IV",
                  "unbxdId": null,
                },
              ],
              "generalProductId": "3000935_IV",
              "ratingsProductId": "2100622",
            }
          }
          sizeUnavailable=""
        />
        <div
          className="qty-selector"
        >
          <Field
            component={[Function]}
            dataLocator="addnewaddress-state"
            id="quantity"
            name="Quantity"
            options={1}
            width={32}
          />
        </div>
      </div>
      <Measure
        name="controls_visible"
      />
    </Styled(Col)>
  </Styled(Row)>
</form>
`;

exports[`ProductAddToBagVanilla should render correctly should match snapshot with error messages 1`] = `
<form
  className=""
  noValidate={true}
>
  <Styled(Row)
    className="edit-form-css"
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 10,
          "medium": 10,
          "small": 10,
        }
      }
    >
      <div
        className="select-value-wrapper"
      >
        <div
          className="size-selector"
        >
          <Field
            className="size-field-error"
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-chPdSV",
                  "isStatic": false,
                  "rules": Array [
                    "
  ",
                    "
  .size-and-fit-detail-container {
    .size-and-fit-detail-title-msg {
      font-size: ",
                    [Function],
                    "px;
      font-weight: ",
                    [Function],
                    ";
      margin-left: 25px;
      vertical-align: middle;
      font-family: ",
                    [Function],
                    ";
    }
  }

  .size-and-fit-detail-items-list {
    margin-top: ",
                    [Function],
                    ";
    width: calc(100% + 10px);
    position: relative;
    left: -5px;
    font-family: ",
                    [Function],
                    ";
  }

  /* Radio Button for size */
  .size-and-fit-detail-item {
    padding: 0px;
    margin: 5px;
    cursor: pointer;

    .input-radio-title {
      padding: 5px ",
                    [Function],
                    ";
      border: 1px solid ",
                    [Function],
                    ";
      display: inline-block;
      text-transform: capitalize;
      font-size: ",
                    [Function],
                    "px;
      border-radius: 6px;
      margin-bottom: ",
                    [Function],
                    ";
      text-align: center;
      width: 54px;
    }

    &.item-disabled-option .input-radio-title {
      color: #e3e3e3;
      cursor: initial;
      border: solid 1px #e3e3e3;
    }

    .input-radio-icon-unchecked,
    .input-radio-icon-checked {
      width: auto;
      height: auto;
      top: auto;
      position: absolute;
      vertical-align: middle;

      input {
        -webkit-appearance: none;
        display: none;
      }

      &:before,
      &:after {
        display: none;
      }
    }

    .input-radio-icon-checked + .input-radio-title {
      background: ",
                    [Function],
                    ";
      color: ",
                    [Function],
                    ";
      border: solid 1px ",
                    [Function],
                    ";
      font-weight: ",
                    [Function],
                    ";
    }
  }
",
                    ";
",
                  ],
                },
                "displayName": "Styled(ProductSizeSelector)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-chPdSV",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            dataLocator="addnewaddress-state"
            id="size"
            name="Size"
            onChange={[MockFunction]}
            sizesMap={
              Immutable.List [
                Immutable.Map {
                  "displayName": "XS (4)",
                  "id": "XS (4)",
                  "maxAvailable": 739,
                },
              ]
            }
            title="Size:"
            width={49}
          />
          <Styled(BodyCopy)
            className="size-error"
            color="text.primary"
            component="div"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            <Styled(Image)
              alt="Error"
              className="error-image"
              data-locator="productcustomizeform-error-icon"
              src="/static/images/alert-triangle.png"
            />
            <Styled(BodyCopy)
              className="size-error-message"
              color="text.primary"
              component="div"
              fontFamily="secondary"
              fontSize="fs12"
              fontWeight="regular"
              letterSpacing="normal"
              lineHeight="normal"
              link={null}
              textAlign="left"
            >
               ERROR: 
            </Styled(BodyCopy)>
          </Styled(BodyCopy)>
        </div>
        <Connect(ProductPickupContainer)
          formName="ProductAddToBag-3000935_IV"
          isAnchor={true}
          productInfo={
            Object {
              "colorFitsSizesMap": Array [
                Object {
                  "categoryEntity": "Girl:School Uniforms",
                  "color": Object {
                    "family": "BLUE",
                    "imagePath": "/wcsstore/GlobalSAS/images/tcp/products/swatches/3000935_IV.jpg",
                    "name": "TIDAL",
                  },
                  "colorDisplayId": "3000935_IV",
                  "colorProductId": "1281598",
                  "favoritedCount": 0,
                  "fits": Array [
                    Object {
                      "fitName": "regular",
                      "isDefault": true,
                      "maxAvailable": 1.7976931348623157e+308,
                      "sizes": Array [
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 739,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 0,
                          "sizeName": "XS (4)",
                          "skuId": "1281998",
                          "variantId": "00193511074322",
                          "variantNo": "3000935007",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 6771,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 1,
                          "sizeName": "S (5/6)",
                          "skuId": "1282327",
                          "variantId": "00193511074339",
                          "variantNo": "3000935008",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 12920,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 2,
                          "sizeName": "M (7/8)",
                          "skuId": "1281700",
                          "variantId": "00193511074346",
                          "variantNo": "3000935009",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 9331,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 3,
                          "sizeName": "L (10/12)",
                          "skuId": "1281815",
                          "variantId": "00193511074353",
                          "variantNo": "3000935010",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 4381,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 4,
                          "sizeName": "XL (14)",
                          "skuId": "1281870",
                          "variantId": "00193511074360",
                          "variantNo": "3000935011",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 3473,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 5,
                          "sizeName": "XXL (16)",
                          "skuId": "1281922",
                          "variantId": "00193511074377",
                          "variantNo": "3000935012",
                        },
                      ],
                    },
                    Object {
                      "fitName": "plus",
                      "isDefault": false,
                      "maxAvailable": 1.7976931348623157e+308,
                      "sizes": Array [
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 1037,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 0,
                          "sizeName": "L(10P-12P)",
                          "skuId": "1225288",
                          "variantId": "00193511079488",
                          "variantNo": "3000936026",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 1231,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 1,
                          "sizeName": "XL(14P)",
                          "skuId": "1225289",
                          "variantId": "00193511079495",
                          "variantNo": "3000936027",
                        },
                        Object {
                          "listPrice": 12.95,
                          "maxAvailable": 2345,
                          "maxAvailableBoss": 0,
                          "offerPrice": 12.95,
                          "position": 2,
                          "sizeName": "XXL (16P)",
                          "skuId": "1225287",
                          "variantId": "00193511079471",
                          "variantNo": "3000936025",
                        },
                      ],
                    },
                  ],
                  "hasFits": true,
                  "imageName": "3000935_IV",
                  "listPrice": 12.95,
                  "maxAvailable": 42228,
                  "maxAvailableBoss": 0,
                  "miscInfo": Object {
                    "badge1": Object {
                      "defaultBadge": "ONLINE EXCLUSIVE",
                    },
                    "badge2": "",
                    "hasOnModelAltImages": "",
                    "isBopisEligible": false,
                    "isBossEligible": true,
                    "isClearance": "",
                    "keepAlive": false,
                    "videoUrl": "",
                  },
                  "name": null,
                  "offerPrice": 12.95,
                  "pdpUrl": "/us/p/3000935_IV",
                  "unbxdId": null,
                },
              ],
              "generalProductId": "3000935_IV",
              "ratingsProductId": "2100622",
            }
          }
          sizeUnavailable=""
        />
        <div
          className="qty-selector"
        >
          <Field
            component={[Function]}
            dataLocator="addnewaddress-state"
            id="quantity"
            name="Quantity"
            options={1}
            width={32}
          />
        </div>
      </div>
      <Measure
        name="controls_visible"
      />
    </Styled(Col)>
  </Styled(Row)>
</form>
`;
